--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -67,7 +67,7 @@
 											</header>
 
 											<section>
-												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
+												<span class="image featured"><img src="http://img11.deviantart.net/eb55/i/2010/331/6/4/xbox_new_logo_by_pepsi9072-d33qi4b.jpg" alt="" /></span>
 												<p>
 													Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
