--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -68,12 +68,10 @@
 
 											<section>
 												<span class="image featured"><img src="http://img11.deviantart.net/eb55/i/2010/331/6/4/xbox_new_logo_by_pepsi9072-d33qi4b.jpg" alt="" /></span>
-												<p>
-													Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.
-												</p>
+												<p> Here are the facts </p>
+												<p> Advantages of Xbox one</p>
+												<p> Newer games </p>
+												<p> Less overheating </p>
 											</section>
 
 											<section>
