--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -68,8 +68,7 @@
 
 											<section>
 												<span class="image featured"><img src="http://img11.deviantart.net/eb55/i/2010/331/6/4/xbox_new_logo_by_pepsi9072-d33qi4b.jpg" alt="" /></span>
-												<p> Here are the facts </p>
-												<p> Advantages of Xbox one</p>
+												<header> Advantages of Xbox one</header>
 												<p> Newer games </p>
 												<p> Less overheating </p>
 											</section>
